Unit testing thing kinda

--- a/README
+++ b/README
@@ -3,3 +3,7 @@ Introducing...
 The KREYGASM Engine
 
 Kevin's REgexY Game Applied Sentence Matching Engine
+
+TODO:
+-Make unit tests
+-Find script syntax for script syntax
